--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>显示你好</title>
-    <!-- 可选：简单样式，让文字居中且更大更醒目 -->
+    <title>你好</title>
     <style>
         body {
             display: flex;
